refactor: clean up unused imports and improve default savings product handling in initialization